--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -1,3 +1,5 @@
+\input{../TeX/base} %BASE!!!
+ 
 \title{\TITOLODOC}
 \author{Carollo Mirko}
  
@@ -241,13 +243,13 @@ Per il tracciamento degli errori e delle loro soluzioni ci si avvarr\`a degli st
 
 
 \subsezione{Infrastrutture e procedure di automazione} 
-Hanno lo scopo di accelerare tutte le attivit\`a di verifica e impedire errori umani.
-Tali attivit\`a potranno quindi essere svolte dopo ogni singolo cambiamento, anche di piccola entit\`a. Saranno predisposte dai verificatori.
 \begin{figure}[!ht]
 \centering
 \includegraphics[scale=4]{flussi.png}
 \caption{flussi}
 \end{figure} 
+Hanno lo scopo di accelerare tutte le attivit\`a di verifica e impedire errori umani.
+Tali attivit\`a potranno quindi essere svolte dopo ogni singolo cambiamento, anche di piccola entit\`a. Saranno predisposte dai verificatori.
 Sono raggruppabili in 3 categorie:
 
 \begin{elenconumerato}[\textbf{}]{\subsubsecindent}
@@ -299,4 +301,4 @@ La campagna di validazione si svolger\`a in due fasi distinte:
 \subsezione{Dettaglio dell'esito della campagna di validazione}
  
 \end{document}
-
+ 
