PP: consuntivo (da completare)

--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{2.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{2.1} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Piano di Progetto} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -567,6 +567,7 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 \end{table}
 
 \newpage
+
 \sezione{Consuntivi}
 \subsezione{Fase RR-RPP}
 \begin{table}[h]
@@ -640,6 +641,82 @@ Come si pu\`o vedere dai dati precendentemente elencati si sono rivelate necessa
 sono stati richiesti sforzi maggiori dal ruolo di amministratore per l'attuazione di piani e procedure di gestione della qualit\`a ed
 analista per analizzare pi\`u a fondo i requisiti. I ruoli di responsabile, progettista e verificatore hanno invece richiesto minori
 risorse del previsto anche grazie al buon lavoro svolto nella fase PRE-RR.
+
+\newpage
+
+\sezione{Consuntivi}
+\subsezione{Fase RPP-RQ}
+\begin{table}[h]
+	\begin{center}
+		  \begin{tabular}{|c|c|c|c|}
+		 \hline 
+		 \textbf{Ruolo} & \textbf{Ore di lavoro} & \textbf{Costo in euro}\\
+		 \hline
+		Responsabile & 31 & 930 \\
+		Amministratore & 42 & 840\\
+		Analista & 12 & 300\\
+		Progettista & 82 & 1804\\
+		Programmatore & 103 & 1648 \\
+		Verificatore & 97 & 1552\\
+        \hline
+        \textbf{Totale} & \textbf{367} & \textbf{7074}\\
+		\hline
+		\end{tabular}
+	\caption{Consuntivo RPP-RQ} 
+	\label{tab:cons_RPP-RQ}
+	\end{center}	
+\end{table}
+
+\begin{center}\textbf{Ore/Ruolo}
+\end{center}
+\includegraphics[width=300pt]{Cons-RPP-RQ2}
+\newpage
+
+\begin{center}\textbf{Costo/Ruolo}
+\end{center}
+\includegraphics[width=350pt]{Cons-RPP-RQ1}
+
+
+\begin{table}[!h]
+	\begin{center}
+		  \begin{tabular}
+			  {|c|c|c|c|c|c|c|c|}
+		 \hline
+%%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%			\multicolumn{3}{|c|}{ \multirow{2}{*}{ FASE RPP - RQ} } \\
+			\multicolumn{8}{|c|}{ \textbf{Consuntivo Ore/Ruolo} } \\
+			\hline
+			\textbf{Componente} & \multicolumn{7}{|c|}{ \textbf{RUOLO} } \\
+			\hline
+			& \textbf{Resp.} & \textbf{Amm.} & \textbf{Analis.} & \textbf{Progett.} & \textbf{Program.} & \textbf{Verif.}  & \textbf{Totale}\\
+			\hline
+%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+							%RESP    % AMMIN  %  ANALISTA  %  PROGET. %  PROGRAM %    VERIF.   % TOTALE
+			Bizzotto Piero 		&  0  &  0  &  4  &  0  &  13 &  28 &  45 \\ % R4
+			\hline
+			Carollo Mirko 		&  0  &  0  &  12 &  0  &  10 &  31 &  49\\ % R5
+			\hline
+			Cunico Marco    	&  7  &  11 &  0  &  23 &  16 &  0  &  57\\ % R2
+			\hline
+			Dal Bosco Davide   	&  8  &  5  &  0  &  16 &  11 &  38 &  78\\ % R1
+			\hline
+			Dissegna Stefano    &  8  &  10 &  0  &  20 &  23 &  0  &  61\\ % R6
+			\hline
+			Geremia Mirco   	&  0  &  0  &  0  &  23 &  18 &  0  &  41\\ % R7
+			\hline	
+			Rizzo Maurizio  	&  8  &  16 &  0  &  0  &  12 &  0  &  36\\ %R3
+			\hline	
+%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+		\end{tabular}
+	\caption{Consuntivo carico/persona RPP-RQ} %INSERIRE DIDASCALIA - SE NECESSARIA - 
+	\label{tab: ConsPersOre_RPP-RQ}
+	\end{center}	
+\end{table}
+
+meno analisi perche' era di cuscinetto;
+meno progettista .. boh
+piu' programmatore perche' desiderabili (?)
+meno verifica perche' strumenti hanno aiutato e automatizzato molto...
 
 \newpage
 
