DP: corretto Connession -> Connection

--- a/doc/DefinizioneProdotto/DefinizioneProdotto.tex
+++ b/doc/DefinizioneProdotto/DefinizioneProdotto.tex
@@ -1180,7 +1180,7 @@ Permette l'accesso all'applicazione ed al manuale utente, gestisce il salvataggi
 \subsubsezione{Tipo, obiettivo e funzione del componente}
 Classe che accetta le richieste dal client e le inoltra alla classe \textit{Server}. Permette la comunicazione tra il client e il server.
 \subsubsezione{Relazioni d'uso di altre componenti}
-Utilizza istanze di \textit{Server} e di \textit{ConnessionError}.
+Utilizza istanze di \textit{Server} e di \textit{ConnectionError}.
 \subsubsezione{Interfacce e relazioni di uso da altre componenti}
 \`E utilizzata dal client per inviare una richiesta al server.
 \subsubsezione{Attivit\`a svolte e dati trattati}
@@ -1251,7 +1251,7 @@ Rappresenta un errore generico di comunicazione. Non viene implementata in quant
 \subsubsezione{Relazioni d'uso di altre componenti}
 Nessuna.
 \subsubsezione{Interfacce e relazioni di uso da altre componenti}
-Implementata da \textit{ConnessionServer} e da \textit{ServerError}.
+Implementata da \textit{ConnectionServer} e da \textit{ServerError}.
 \subsubsezione{Attivit\`a svolte e dati trattati}
 \paragrafo{Metodi pubblici:}
 \begin{elencopuntato}[\subsubsecindent]
@@ -1259,7 +1259,7 @@ Implementata da \textit{ConnessionServer} e da \textit{ServerError}.
 \end{elencopuntato}
 
 
-\subsezione{ConnessionError}
+\subsezione{ConnectionError}
 \subsubsezione{Tipo, obiettivo e funzione del componente}
 Classe concreta che rappresenta un errore generato da un connessione con il server.
 \subsubsezione{Relazioni d'uso di altre componenti}
