PP: concluso consuntivo

--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -509,15 +509,15 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 			\hline
 			Carollo Mirko & Verif.   \\
 			\hline
-			Cunico Marco & Verif.-Amm.   \\
+			Cunico Marco & Amm. & Program.   \\
 			\hline
-			Dal Bosco Davide & Amm.   \\
+			Dal Bosco Davide & Amm. - Program.  \\
 			\hline
-			Dissegna Stefano & Resp.   \\
+			Dissegna Stefano & Resp. - Progett.   \\
 			\hline
-			Geremia Mirco & Verif.   \\
+			Geremia Mirco & Proget.   \\
 			\hline
-            Rizzo Maurizio  & Verif.\\
+            Rizzo Maurizio  & Verif. \\
 			\hline
 
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -703,7 +703,7 @@ risorse del previsto anche grazie al buon lavoro svolto nella fase PRE-RR.
 			\hline
 			Geremia Mirco   	&  0  &  0  &  0  &  23 &  18 &  0  &  41\\ % R7
 			\hline	
-			Rizzo Maurizio  	&  8  &  16 &  0  &  0  &  22 &  0  &  46\\ %R3
+			Rizzo Maurizio  	&  8  &  16 &  0  &  0  &  12 &  0  &  36\\ %R3
 			\hline	
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\end{tabular}
@@ -711,6 +711,8 @@ risorse del previsto anche grazie al buon lavoro svolto nella fase PRE-RR.
 	\label{tab: ConsPersOre_RPP-RQ}
 	\end{center}	
 \end{table}
+
+Si pu\`o notare dai dati che in generale \`e stato richiesto un impegno leggermente minore rispetto a quanto previsto, in particolare il ruolo di Analista ha richiesto meno impegno, poich\`e nel preventivo l'azienda si era tutelata su questo campo inserendo ore extra per eventuali problemi. Sono state utilizzate meno ore anche per quel che riguarda la verifica, dove hanno giocato un ruolo importante gli stumenti adottati e le modalit\`a di automazione della gestione degli errori, che hanno permesso di velocizzare i processi di verifica. L'unico ruolo che ha richiesto un maggiore impegno \`e stato quello del Programmatore, poich\`e si sono riscontrati problemi non previsti nell'implementazione di alcuni elementi.
 
 meno analisi perche' era di cuscinetto;
 meno progettista .. boh
