--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -85,7 +85,9 @@ Il presente documento descrive le strategie per la gestione della qualit\`a adot
         RR-RPP & Carollo Mirko\\
         
         \hline
-         RPP-RQ & Carollo Mirko\\
+         RPP-RQ 
+				& Carollo Mirko \\
+				& Dissegna Stefano \\
         
         \hline
         %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -114,7 +116,7 @@ Il presente documento descrive le strategie per la gestione della qualit\`a adot
       RR-RPP & Geremia Mirco \\
                   
       \hline
-      RPP-RQ & Dissegna Stefano \\
+      RPP-RQ & Bizzotto Piero \\
                   
       \hline
       %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -150,7 +152,9 @@ Il presente documento descrive le strategie per la gestione della qualit\`a adot
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
      \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-     3.0 &    27$\slash$02$\slash$2009 Sistemazione in vista rilascio RQ & Carollo Mirko\\
+     3.0 &    6$\slash$03$\slash$2009 Sistemazione in vista rilascio RQ & Carollo Mirko\\
+      \hline
+      2.1 &  5$\slash$03$\slash$2009 Aggiunte metriche di valutazione ed aspettative & Dissegna Stefano \\
       \hline     2.0 &    23$\slash$01$\slash$2009 Verifica finale in preparazione al rilascio per la RPP & Carollo Mirko\\
       \hline 
       1.1 &    19$\slash$01$\slash$2009 Aggiunti strumenti e procedure di automazione & Carollo Mirko\\
@@ -294,6 +298,20 @@ La copertura indica, in percentuale, quante linee di codice vengono eseguite dur
 \item[-] Logica interna: ci si aspetta una copertura tra l'80\% ed il 90\% su un singolo browser. Alcune parti vengono eseguite a seconda del browser, e quindi ci si aspetta di superare il 90\% solo eseguendo i test su pi\`u browser.
 \item[-] Server: ci si attende una copertura vicina al 100\%.
 \end{elencopuntato}
+
+\subsezione{Numero di test superati}
+Misura lo stato di avanzamento del prodotto e la quantit\`a di bug conosciuti ancora presenti. Va presa in considerazione solo dopo che i test hanno una copertura in linea con quanto descritto precedentemente. I risultati possono variare a seconda del browser, quindi la metrica va ripetuta per ogni browser. Il sistema utilizzato per i test, \textit{QUnit}, fornisce questo dato al termine dell'esecuzione dei test. Ci si aspetta di superare il 100\% dei test su tutti i browser supportati (si veda \textit{AnalisiDeiRequisiti.pdf} per una lista dei browser) prima della consegna del prodotto.
+
+\subsezione{Numero di requisiti soddisfatti}
+Misura lo stato di avanzamento del prodotto. A seconda del tipo di requisito ci si attende valori differenti:
+\begin{elencopuntato}[\subsecindent]
+\item[-] Obbligatori: devono essere soddisfatti tutti prima della consegna. Per la RQ ci si aspetta di soddisfarli tutti, anche se con qualche difetto da rimuovere prima della consegna finale del prodotto.
+\item[-] Desiderabili: a seconda del tempo disponibile. Ci si attende di soddisfarne almeno uno su tre.
+\item[-] Opzionali: a seconda del tempo disponibile. Se un requisito opzionale viene soddisfatto, devono essere soddisfatti prima tutti quelli desiderabili.
+\end{elencopuntato}
+
+\subsezione{Numero di errori di stile}
+Misura l'aderenza alle norme di codifica, ed \`e il numero di errori riportati da \textit{JSLint} \footnote{Fatta eccezione per l'errore \textit{'FunctionName' was used before it was defined}}. Deve essere pari, o quasi, a zero. Un numero particolarmente elevato di errori \`e indicatore di scarsa attenzione al codice.
 
 \sezione{Resoconto delle attivit\`a di verifica}
  
